* The structure of the JSON result format has been altered (bug 37418).

=== New features ===

* Added anonymous auto-numbering for subobjects that don't specify their identifier (bug 36634)
* Added atom printer (bug 38636)
* Added support to have fixed tables for a property, see http://semantic-mediawiki.org/wiki/Fixed_properties
* Added new info tooltip (bug 37361)

=== Enhancements ===

* Hash-based checks to update SMW data rather than the delete-insert method used before
* Different tables for different datatypes leading to less storage wastage, better query performance
: and improved access methods
* Highly optimized Special pages Special:Properties,Special:UnusedProperties
* Refactored code uses DIHandlers class for Database abstraction for each DataItem
* Splitted the SQLStore into SQLStore3_Writers, SQLStore3_Readers, SQLStore3_SpecialPageHandlers and SQLStore_SetupHandler,
: while keeping the commonly used functions in SQLStore3
* Made query link generation completely generic. Links for all formats will now contain
: all provided arguments.
* Improved JSON export (bug 37418).
* Improved Special:Ask UI.
* Enabled Special:Ask parameters form to be collapsible.
* Added individual format help links to enable access to online help manuals.
* Added tests for the query processor, the store, data items and result printers,
: including base test classes for the later two that can be used by extensions.
* No more inline CSS and JavaScript on special pages (now all resource loader modules).
* Added SMWExportPrinter class to facilitate creating export printers and simplify handling code.
* Added SMWIResultPrinter interface to type hint result printers against.
* Added continuation support to the Ask API.
* Migrated Validator parameter definitions to new Validator 0.5 array style.
* Added possibility to change the appearance of the service link icon via CSS (bug 40644)