@@ -16,6 +16,7 @@ production until the actual release.
 * Added atom printer (bug 38636)
 * Added support to have fixed tables for a property, see http://semantic-mediawiki.org/wiki/Fixed_properties
 * Added new info tooltip (bug 37361)
+* Added two new output formats for properties of type Time, "Gr" and "Jl", to set the desired calendar model for display in #ask results. If nothing is given, SMW will select the calendar based on the date as before (Julian calendar defaults from until 4th Oct 1582). As before. the same behaviour is used when entering dates, and "Jl" and "Gr" also work in this case.
 
 === Enhancements ===
 
@@ -45,6 +46,7 @@ production until the actual release.
 === Dropped features ===
 
 * Special:QueryCreator got disabled pending fixes.
+* Values of type Time can no longer be selected by string pattern matching (the string was unspecified and has an internal format that is not useful to match against). This safes database memory (fewer indexes).
 
 === Bug fixes ===
 
@@ -58,6 +60,14 @@ production until the actual release.
 * Fixed markup issue with the display of service links (bug 39445)
 * Fixed tooltip size issue (bug 29764)
 * Fixed Special:Ask autocomplete issue (bug 40676)
+* Fixed serialisation of Category namespace queries (bug 37065)
+* Fixed non-linked output of URL values in query results (bug 39392)
+* Avoid malformed SPARQL when default graph is not set (bug 37575)
+* Do not batch process pages when using SMW_refreshData.php with delay option (bug 38136)
+* Avoid use of hash_init PHP functions; use md5() instead (bug 38185)
+* Fixed parsing of malformed printout requests that could cause exception (bug 38489)
+* Don't confuse Julian an Gregorian dates internally (bug 41126)
+
 
 === Extended translations ===
 
